[tool.poetry]
name = "py-soundclout"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "soundclout"}]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.5"
selenium = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
